--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Allegiant Landing page</title>
   </head>
   <body>
-    <div class="py-3">
+    <div>
       <header>
         <div class="header-container">
           <div class="allegiant-logo-wrapper">
