--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Inter"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -69,38 +72,42 @@
         </div>
       </nav>
     </header>
-    <main style="margin-left: 4rem">
+    <main>
       <div>
         <div class="row">
           <div class="col">
             <div class="mb-3 form-wrapper">
               <h3>Your Details</h3>
-              <br />
-              <span
-                >Please provide your mobile phone number and create a password
-                and we'll get you straight to your new dashboard.</span
-              >
-              <br />
-              <br />
-              <label for="exampleFormControlInput1" class="form-label"
-                >Mobile phone number</label
-              >
-              <input
-                type="phone"
-                class="form-control"
-                id="exampleFormControlInput1"
-                placeholder="Enter your phone number"
-              />
-              <br />
-              <label for="exampleFormControlInput1" class="form-label"
-                >Password</label
-              >
-              <input type="password" class="form-control" id="pass1" />
-              <br />
-              <label for="exampleFormControlInput1" class="form-label"
-                >Confirm password</label
-              >
-              <input type="password" class="form-control" id="pass2" />
+              <div class="input-wrapper">
+                <span
+                  >Please provide your mobile phone number and create a password
+                  and we'll get you straight to your new dashboard.</span
+                >
+                <br />
+                <label
+                  style="margin-top: 24px"
+                  for="exampleFormControlInput1"
+                  class="form-label"
+                  >Mobile phone number</label
+                >
+                <input
+                  type="phone"
+                  class="form-control"
+                  id="exampleFormControlInput1"
+                  placeholder="Enter your phone number"
+                />
+                <br />
+                <label for="exampleFormControlInput1" class="form-label"
+                  >Enter Password</label
+                >
+                <input type="password" class="form-control" id="pass1" />
+                <br />
+                <label for="exampleFormControlInput1" class="form-label"
+                  >Re-type password</label
+                >
+                <input type="password" class="form-control" id="pass2" />
+              </div>
+
               <button
                 type="button"
                 class="btn btn-primary mt-4 to-dashboard-btn"
