Replace icons and further enhancements

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <img
                   width="48px"
                   class="mr-2 mb-2"
-                  src="assets/Featured-icon.png"
+                  src="assets/Featured-icon.svg"
                 />
                 <span class="question">Is there a free trial available?</span>
               </span>
@@ -159,7 +159,7 @@
                 <img
                   width="48px"
                   class="mr-2 mb-2"
-                  src="assets/Featured-icon.png"
+                  src="assets/Featured-icon-1.svg"
                 />
                 <span class="question">Can I change my plan later?</span>
               </span>
@@ -167,7 +167,7 @@
                 <img
                   width="48px"
                   class="mr-2 mb-2"
-                  src="assets/Featured-icon.png"
+                  src="assets/Featured-icon-2.svg"
                 />
                 <span class="question">What is your cancellation policy?</span>
               </span>
