--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           <div class="card claim-info">
             <div class="card-body">
               <div class="d-flex justify-content-between">
-                <div>
+                <div class="d-flex align-items-center">
                   <img src="assets/Icon.png" />
-                  <span> Claiming for Fee Yourself</span>
+                  <span class="claim-title"> Claiming for Fee Yourself</span>
                 </div>
                 <div class="minimize-info">I've read please minimize</div>
               </div>
