--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       </div>
     </main>
 
-    <footer class="pt-4 my-md-5 pt-md-5 border-top">
+    <footer class="pt-4 my-md-5 pt-md-5">
       <div class="row">
         <div class="text-center footer-txt">
           <span>
