Add js and make the button disappear

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="jquery.mini.js"></script>
+    <script src="script.js"></script>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Inter"
@@ -44,7 +46,7 @@
                   <img src="assets/Icon.png" />
                   <span class="claim-title"> Claiming for Fee Yourself</span>
                 </div>
-                <div class="minimize-info">I've read please minimize</div>
+                <div class="minimize-info" id="minimize-btn">I've read please minimize</div>
               </div>
               <span class="good-to-know-txt">
                 <strong>Good to know: </strong> You do not need to use a claims
