Placeholder on the password field

--- a/index.html
+++ b/index.html
@@ -114,7 +114,12 @@
                     >Enter Password</label
                   >
                   <div class="input-group">
-                    <input type="password" class="form-control" id="pass1" />
+                    <input
+                      placeholder="Enter password"
+                      type="password"
+                      class="form-control"
+                      id="pass1"
+                    />
                     <div class="input-group-addon">
                       <span id="show-password-toggle">
                         <i class="fa-solid fa-eye" id="pass1-visible-eye"></i>
@@ -130,7 +135,12 @@
                   <label for="exampleFormControlInput1" class="form-label"
                     >Re-type password</label
                   >
-                  <input type="password" class="form-control" id="pass2" />
+                  <input
+                    placeholder="Re-enter password"
+                    type="password"
+                    class="form-control"
+                    id="pass2"
+                  />
                 </div>
               </div>
 
