--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
               <hr class="mt-5" />
               <div
-                class="d-flex justify-content-center align-items-center mt-2"
+                class="d-flex justify-content-center align-items-center mt-2 rating-wrapper"
               >
                 <span>Excellent</span>
                 <img
