Add claim info on the mobile version

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <img src="assets/Icon.png" />
                   <span class="claim-title"> Claiming for Fee Yourself</span>
                 </div>
-                <div class="minimize-info" id="minimize-btn">
+                <div class="minimize-info minimize-btn">
                   I've read please minimize
                 </div>
               </div>
@@ -230,5 +230,28 @@
         </div>
       </div>
     </footer>
+    <div class="bottom-tray bottom-tray-show">
+      <div class="bottom-tray-header">
+        <h5 class="">
+          <!--<span class="tray-pen-heading">Open to Read: </span>-->
+          Claiming for Free Yourself
+        </h5>
+        <div>
+          <span class="minimize-info minimize-btn" id="bottom-tray-close"
+            >I've read, please minimise</span
+          >
+        </div>
+      </div>
+      <div class="bottom-tray-content">
+        <p class="good-to-know-txt">
+          <strong>Good to know:</strong> You do not need to use a claims management company to
+          make your complaint to your lender, bank, pension provider or
+          intermediary. If your complaint is not successful you can refer it to
+          the Financial Ombudsman Service or the Pension Ombudsman yourself for
+          free if the firm is still trading. For eligible failed firms, you can
+          refer a claim to the Financial Services Compensation Scheme for free.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
