Fix mobile version paddings

--- a/index.html
+++ b/index.html
@@ -219,8 +219,9 @@
           <span>
             Allegiant Finance Services Limited is a Claims Management Company
             that is Authorised and Regulated by the Financial Conduct Authority.
-            Firm Reference Number: 836810. Registered with the Information
-            Commissioners Office: Z2569335. VAT Registration No. 274837662.
+            Firm Reference Number: 836810. <br />
+            Registered with the Information Commissioners Office: Z2569335. VAT
+            Registration No. 274837662.
           </span>
           <br />
           <p class="mt-4">
@@ -244,12 +245,13 @@
       </div>
       <div class="bottom-tray-content">
         <p class="good-to-know-txt">
-          <strong>Good to know:</strong> You do not need to use a claims management company to
-          make your complaint to your lender, bank, pension provider or
-          intermediary. If your complaint is not successful you can refer it to
-          the Financial Ombudsman Service or the Pension Ombudsman yourself for
-          free if the firm is still trading. For eligible failed firms, you can
-          refer a claim to the Financial Services Compensation Scheme for free.
+          <strong>Good to know:</strong> You do not need to use a claims
+          management company to make your complaint to your lender, bank,
+          pension provider or intermediary. If your complaint is not successful
+          you can refer it to the Financial Ombudsman Service or the Pension
+          Ombudsman yourself for free if the firm is still trading. For eligible
+          failed firms, you can refer a claim to the Financial Services
+          Compensation Scheme for free.
         </p>
       </div>
     </div>
