Handle tablet view

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <main>
       <div>
         <div class="row">
-          <div class="col">
+          <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="mb-3 form-wrapper">
               <h3>Your Details</h3>
               <div class="input-wrapper">
@@ -173,7 +173,7 @@
             </div>
           </div>
           <div
-            class="col gradient-side"
+            class="col-lg-6 col-md-6 col-sm-12 gradient-side"
             style="background-color: rgb(20, 38, 69)"
           >
             <span class="gradient-headline"
