Fix gradient part margin on mobile size

--- a/index.html
+++ b/index.html
@@ -173,40 +173,43 @@
             </div>
           </div>
           <div
-            class="col-lg-6 col-md-6 col-sm-12 gradient-side"
-            style="background-color: rgb(20, 38, 69)"
+            class="col-lg-6 col-md-6 col-sm-12"
           >
-            <span class="gradient-headline"
-              >This is some reinforcing information about the product and why
-              the user should continue. Aenean euismod bibendum laoreet. Proin
-              gravida dolor sit amet lacus accumsan et viverra justo commodo.
-            </span>
+            <div class="gradient-side">
+              <span class="gradient-headline"
+                >This is some reinforcing information about the product and why
+                the user should continue. Aenean euismod bibendum laoreet. Proin
+                gravida dolor sit amet lacus accumsan et viverra justo commodo.
+              </span>
 
-            <div class="row mt-4 bullets">
-              <span>
-                <img
-                  width="48px"
-                  class="mr-2 mb-2"
-                  src="assets/Featured-icon.svg"
-                />
-                <span class="question">Is there a free trial available?</span>
-              </span>
-              <span>
-                <img
-                  width="48px"
-                  class="mr-2 mb-2"
-                  src="assets/Featured-icon-1.svg"
-                />
-                <span class="question">Can I change my plan later?</span>
-              </span>
-              <span>
-                <img
-                  width="48px"
-                  class="mr-2 mb-2"
-                  src="assets/Featured-icon-2.svg"
-                />
-                <span class="question">What is your cancellation policy?</span>
-              </span>
+              <div class="row mt-4 bullets">
+                <span>
+                  <img
+                    width="48px"
+                    class="mr-2 mb-2"
+                    src="assets/Featured-icon.svg"
+                  />
+                  <span class="question">Is there a free trial available?</span>
+                </span>
+                <span>
+                  <img
+                    width="48px"
+                    class="mr-2 mb-2"
+                    src="assets/Featured-icon-1.svg"
+                  />
+                  <span class="question">Can I change my plan later?</span>
+                </span>
+                <span>
+                  <img
+                    width="48px"
+                    class="mr-2 mb-2"
+                    src="assets/Featured-icon-2.svg"
+                  />
+                  <span class="question"
+                    >What is your cancellation policy?</span
+                  >
+                </span>
+              </div>
             </div>
           </div>
         </div>
