--- a/index.html
+++ b/index.html
@@ -172,9 +172,7 @@
               </div>
             </div>
           </div>
-          <div
-            class="col-lg-6 col-md-6 col-sm-12"
-          >
+          <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="gradient-side">
               <span class="gradient-headline"
                 >This is some reinforcing information about the product and why
@@ -183,7 +181,7 @@
               </span>
 
               <div class="row mt-4 bullets">
-                <span>
+                <span class="question-wrapper">
                   <img
                     width="48px"
                     class="mr-2 mb-2"
@@ -191,7 +189,7 @@
                   />
                   <span class="question">Is there a free trial available?</span>
                 </span>
-                <span>
+                <span class="question-wrapper">
                   <img
                     width="48px"
                     class="mr-2 mb-2"
@@ -199,7 +197,7 @@
                   />
                   <span class="question">Can I change my plan later?</span>
                 </span>
-                <span>
+                <span class="question-wrapper">
                   <img
                     width="48px"
                     class="mr-2 mb-2"
