Initial side nav setup

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -51,9 +51,7 @@
                 alt="logo"
                 class="main-logo"
               />
-              <span class="user-name-txt">
-                John Smith
-              </span>
+              <span class="user-name-txt"> John Smith </span>
             </span>
 
             <button
@@ -77,6 +75,50 @@
         </div>
       </nav>
     </header>
-    This is dashboard!
+    <main>
+      <div class="d-flex flex-column flex-shrink-0 p-3 side-nav">
+      <!-- <div class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"> -->
+        <ul class="nav nav-pills flex-column mb-auto">
+          <li class="nav-item">
+            <a href="#" class="nav-link active" aria-current="page">
+              <svg class="bi pe-none me-2" width="16" height="16">
+                <use xlink:href="#home"></use>
+              </svg>
+              Dashboard
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav-link link-light">
+              <svg class="bi pe-none me-2" width="16" height="16">
+                <use xlink:href="#speedometer2"></use>
+              </svg>
+              My Details
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="row" style="width: 100%">
+        <div class="col-lg-6 col-md-6 col-sm-12">Hello 1</div>
+        <div class="col-lg-6 col-md-6 col-sm-12">There</div>
+      </div>
+    </main>
+    <div class="bottom-tray bottom-tray-show">
+      <div class="row">
+        <div class="text-center footer-txt">
+          <span>
+            Allegiant Finance Services Limited is a Claims Management Company
+            that is Authorised and Regulated by the Financial Conduct Authority.
+            Firm Reference Number: 836810. <br />
+            Registered with the Information Commissioners Office: Z2569335. VAT
+            Registration No. 274837662.
+          </span>
+          <br />
+          <p class="mt-4">
+            Need help? Call us on 0345 544 1563 (all calls are recorded for
+            training and monitoring purposes)
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
