Hide left side nav for table and display right side nav if clicked

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -57,6 +57,12 @@
             </span>
 
             <button
+              id="open-side-nav"
+              type="button"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <button
               class="navbar-toggler"
               type="button"
               data-bs-toggle="collapse"
@@ -141,15 +147,6 @@
                   </div>
                 </div>
               </div>
-              <button
-                type="button"
-                class="btn btn-primary"
-                data-toggle="modal"
-                data-target="#exampleModal"
-                id="open-side-nav"
-              >
-                Launch demo modal
-              </button>
               <!-- Modal -->
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">Sup</div>
