--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -56,10 +56,7 @@
               <span class="user-name-txt"> John Smith </span>
             </span>
 
-            <button
-              id="open-side-nav"
-              type="button"
-            >
+            <button id="open-side-nav" type="button">
               <span class="navbar-toggler-icon"></span>
             </button>
             <button
@@ -105,49 +102,51 @@
             </li>
           </ul>
         </nav>
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+        <main class="col-md-auto ms-sm-auto col-lg-10 px-md-4">
           <div class="row" style="width: 100%">
-            <div class="col-lg-6 col-md-6 col-sm-12">
-              <div
-                class="modal fade"
-                id="exampleModal"
-                tabindex="-1"
-                role="dialog"
-                aria-labelledby="exampleModalLabel"
-                aria-hidden="true"
-              >
-                <div class="modal-dialog" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">
-                        Modal title
-                      </h5>
-                      <button
-                        type="button"
-                        class="close"
-                        data-dismiss="modal"
-                        aria-label="Close"
-                      >
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                    <div class="modal-body">...</div>
-                    <div class="modal-footer">
-                      <button
-                        type="button"
-                        class="btn btn-secondary"
-                        data-dismiss="modal"
-                      >
-                        Close
-                      </button>
-                      <button type="button" class="btn btn-primary">
-                        Save changes
-                      </button>
-                    </div>
-                  </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 card-wrapper">
+              <div class="card">
+                <div class="card-body">
+                  <span class="d-flex align-items-center">
+                    <img src="../assets/card-one-logo.png" />
+                    <h5 class="card-title">Credit Report</h5>
+                  </span>
+                  <span class="card-txt">
+                    <h6 class="card-subtitle mb-2 text-muted">
+                      Cras nec rutrum odio, at semper mi. Vivamus mattis dapibus
+                      est a finibus. Integer aliquet ex tellus, vitae faucibus
+                      nulla gravida id.
+                    </h6>
+                    <p class="card-text">
+                      Aenean suscipit sodales auctor. Nunc blandit leo a mi
+                      commodo, a vehicula justo vulputate. Etiam nec fermentum
+                      metus, at vulputate elit. Etiam pharetra eleifend
+                    </p>
+                    <button class="btn btn-primary">Connect now</button>
+                  </span>
                 </div>
               </div>
-              <!-- Modal -->
+              <div class="card">
+                <div class="card-body">
+                  <span class="d-flex align-items-center">
+                    <img src="../assets/card-one-logo.png" />
+                    <h5 class="card-title">Open Banking</h5>
+                  </span>
+                  <span class="card-txt">
+                    <h6 class="card-subtitle mb-2 text-muted">
+                      Cras nec rutrum odio, at semper mi. Vivamus mattis dapibus
+                      est a finibus. Integer aliquet ex tellus, vitae faucibus
+                      nulla gravida id.
+                    </h6>
+                    <p class="card-text">
+                      Aenean suscipit sodales auctor. Nunc blandit leo a mi
+                      commodo, a vehicula justo vulputate. Etiam nec fermentum
+                      metus, at vulputate elit. Etiam pharetra eleifend
+                    </p>
+                    <button class="btn btn-primary">Connect now</button>
+                  </span>
+                </div>
+              </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">Sup</div>
           </div>
@@ -175,3 +174,35 @@
     </div>
   </body>
 </html>
+
+<div
+  class="modal fade"
+  id="exampleModal"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">...</div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+          Close
+        </button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
