Add gradient side content

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -148,7 +148,56 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-12">Sup</div>
+            <div class="col-lg-6 col-md-6 col-sm-12 gradient-side">
+              <div class="video-wrapper text-center">
+                <video
+                  width="670"
+                  height="263"
+                  controls
+                  style="max-width: 100%"
+                >
+                  <source
+                    src="https://www.w3schools.com/tags/movie.mp4"
+                    type="video/mp4"
+                  />
+                  Your browser does not support the video tag.
+                </video>
+              </div>
+              <div>
+                <p>
+                  This is some reinforcing information about the product and why
+                  the user should continue. Aenean euismod bibendum laoreet.
+                </p>
+              </div>
+              <div class="row mt-4 bullets">
+                <span class="question-wrapper">
+                  <img
+                    width="48px"
+                    class="mr-2 mb-2"
+                    src="assets/Featured-icon.svg"
+                  />
+                  <span class="question">Is there a free trial available?</span>
+                </span>
+                <span class="question-wrapper">
+                  <img
+                    width="48px"
+                    class="mr-2 mb-2"
+                    src="assets/Featured-icon-1.svg"
+                  />
+                  <span class="question">Can I change my plan later?</span>
+                </span>
+                <span class="question-wrapper">
+                  <img
+                    width="48px"
+                    class="mr-2 mb-2"
+                    src="assets/Featured-icon-2.svg"
+                  />
+                  <span class="question"
+                    >What is your cancellation policy?</span
+                  >
+                </span>
+              </div>
+            </div>
           </div>
         </main>
       </div>
