--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -163,7 +163,7 @@
                   Your browser does not support the video tag.
                 </video>
               </div>
-              <div>
+              <div class="mt-5 main-txt text-center">
                 <p>
                   This is some reinforcing information about the product and why
                   the user should continue. Aenean euismod bibendum laoreet.
@@ -172,28 +172,30 @@
               <div class="row mt-4 bullets">
                 <span class="question-wrapper">
                   <img
-                    width="48px"
+                    width="28px"
                     class="mr-2 mb-2"
-                    src="assets/Featured-icon.svg"
+                    src="../assets/Check-icon.png"
                   />
-                  <span class="question">Is there a free trial available?</span>
+                  <span class="question">Mauris sed tincidunt lacus?</span>
                 </span>
                 <span class="question-wrapper">
                   <img
-                    width="48px"
+                    width="28px"
                     class="mr-2 mb-2"
-                    src="assets/Featured-icon-1.svg"
-                  />
-                  <span class="question">Can I change my plan later?</span>
-                </span>
-                <span class="question-wrapper">
-                  <img
-                    width="48px"
-                    class="mr-2 mb-2"
-                    src="assets/Featured-icon-2.svg"
+                    src="../assets/Check-icon.png"
                   />
                   <span class="question"
-                    >What is your cancellation policy?</span
+                    >Morbi mollis pulvinar nisi, in convallis sem?</span
+                  >
+                </span>
+                <span class="question-wrapper">
+                  <img
+                    width="28px"
+                    class="mr-2 mb-2"
+                    src="../assets/Check-icon.png"
+                  />
+                  <span class="question"
+                    >Curabitur velit ante, vulputate aliquam?</span
                   >
                 </span>
               </div>
