--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -103,7 +103,7 @@
           </ul>
         </nav>
         <main class="col-md-auto ms-sm-auto col-lg-10 px-md-4">
-          <div class="row" style="width: 100%">
+          <div class="row main-wrapper">
             <div class="col-lg-6 col-md-6 col-sm-12 card-wrapper">
               <div class="card">
                 <div class="card-body">
@@ -112,7 +112,7 @@
                     <h5 class="card-title">Credit Report</h5>
                   </span>
                   <span class="card-txt">
-                    <h6 class="card-subtitle mb-2 text-muted">
+                    <h6 class="card-subtitle mb-4 text-muted">
                       Cras nec rutrum odio, at semper mi. Vivamus mattis dapibus
                       est a finibus. Integer aliquet ex tellus, vitae faucibus
                       nulla gravida id.
@@ -122,7 +122,7 @@
                       commodo, a vehicula justo vulputate. Etiam nec fermentum
                       metus, at vulputate elit. Etiam pharetra eleifend
                     </p>
-                    <button class="btn btn-primary">Connect now</button>
+                    <button class="btn btn-primary connect-now-btn">Connect now</button>
                   </span>
                 </div>
               </div>
@@ -133,7 +133,7 @@
                     <h5 class="card-title">Open Banking</h5>
                   </span>
                   <span class="card-txt">
-                    <h6 class="card-subtitle mb-2 text-muted">
+                    <h6 class="card-subtitle mb-4 text-muted">
                       Cras nec rutrum odio, at semper mi. Vivamus mattis dapibus
                       est a finibus. Integer aliquet ex tellus, vitae faucibus
                       nulla gravida id.
@@ -143,7 +143,7 @@
                       commodo, a vehicula justo vulputate. Etiam nec fermentum
                       metus, at vulputate elit. Etiam pharetra eleifend
                     </p>
-                    <button class="btn btn-primary">Connect now</button>
+                    <button class="btn btn-primary connect-now-btn">Connect now</button>
                   </span>
                 </div>
               </div>
