--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -56,7 +56,7 @@
               <span class="user-name-txt"> John Smith </span>
             </span>
 
-            <button id="open-side-nav" type="button">
+            <button class="navbar-toggler" id="open-side-nav" type="button">
               <span class="navbar-toggler-icon"></span>
             </button>
             <button
@@ -122,7 +122,9 @@
                       commodo, a vehicula justo vulputate. Etiam nec fermentum
                       metus, at vulputate elit. Etiam pharetra eleifend
                     </p>
-                    <button class="btn btn-primary connect-now-btn">Connect now</button>
+                    <button class="btn btn-primary connect-now-btn">
+                      Connect now
+                    </button>
                   </span>
                 </div>
               </div>
@@ -143,7 +145,9 @@
                       commodo, a vehicula justo vulputate. Etiam nec fermentum
                       metus, at vulputate elit. Etiam pharetra eleifend
                     </p>
-                    <button class="btn btn-primary connect-now-btn">Connect now</button>
+                    <button class="btn btn-primary connect-now-btn">
+                      Connect now
+                    </button>
                   </span>
                 </div>
               </div>
