Make the modal close button work

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -244,6 +244,7 @@
         <button
           type="button"
           class="close"
+          data-bs-dismiss="modal"
           data-dismiss="modal"
           aria-label="Close"
         >
