--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -108,7 +108,7 @@
               <div class="card">
                 <div class="card-body">
                   <span class="d-flex align-items-center">
-                    <img src="../assets/card-one-logo.png" />
+                    <img src="../assets/doc-icon.png" />
                     <h5 class="card-title">Credit Report</h5>
                   </span>
                   <span class="card-txt">
@@ -131,7 +131,7 @@
               <div class="card">
                 <div class="card-body">
                   <span class="d-flex align-items-center">
-                    <img src="../assets/card-one-logo.png" />
+                    <img src="../assets/bank.png" />
                     <h5 class="card-title">Open Banking</h5>
                   </span>
                   <span class="card-txt">
