--- a/credit-report/index.html
+++ b/credit-report/index.html
@@ -22,7 +22,7 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <title>Dashboard</title>
+    <title>Credit Report</title>
   </head>
   <body>
     <header>
@@ -98,9 +98,20 @@
             </li>
           </ul>
         </nav>
-        <main class="col-md-auto col-lg-10 px-md-4">
+        <main class="col-md-auto ms-sm-auto col-lg-10 px-md-4">
           <div class="row main-wrapper">
-            Hello
+            <div class="text-center transfer-txt">
+              <h3>We're transfering you</h3>
+              <p>
+                You are now being taken to the UK Credit website in order to
+                complete your credit check. Keep this browser open to return
+                later.
+              </p>
+              <div>
+                <button class="btn btn-light cancel-btn">Cancel</button>
+                <button class="btn btn-primary continue-btn">Continue</button>
+              </div>
+            </div>
           </div>
         </main>
       </div>
