--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -108,12 +108,12 @@
                     <h5 class="card-title">Credit Report</h5>
                   </span>
                   <span class="card-txt">
-                    <h6 class="card-subtitle mb-4 text-muted">
+                    <h6 class="card-subtitle mb-2">
                       Cras nec rutrum odio, at semper mi. Vivamus mattis dapibus
                       est a finibus. Integer aliquet ex tellus, vitae faucibus
                       nulla gravida id.
                     </h6>
-                    <p class="card-text">
+                    <p class="card-text text-muted">
                       Aenean suscipit sodales auctor. Nunc blandit leo a mi
                       commodo, a vehicula justo vulputate. Etiam nec fermentum
                       metus, at vulputate elit. Etiam pharetra eleifend
@@ -131,12 +131,12 @@
                     <h5 class="card-title">Open Banking</h5>
                   </span>
                   <span class="card-txt">
-                    <h6 class="card-subtitle mb-4 text-muted">
+                    <h6 class="card-subtitle mb-2">
                       Cras nec rutrum odio, at semper mi. Vivamus mattis dapibus
                       est a finibus. Integer aliquet ex tellus, vitae faucibus
                       nulla gravida id.
                     </h6>
-                    <p class="card-text">
+                    <p class="card-text text-muted">
                       Aenean suscipit sodales auctor. Nunc blandit leo a mi
                       commodo, a vehicula justo vulputate. Etiam nec fermentum
                       metus, at vulputate elit. Etiam pharetra eleifend
@@ -216,10 +216,10 @@
             Registration No. 274837662.
           </span>
           <br />
-          <p class="mt-4">
+          <span class="mt-4">
             Need help? Call us on 0345 544 1563 (all calls are recorded for
             training and monitoring purposes)
-          </p>
+          </span>
         </div>
       </div>
     </div>
