Add select dropdown temporarly

--- a/institution/index.html
+++ b/institution/index.html
@@ -22,7 +22,7 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <title>Dashboard</title>
+    <title>Credit Report</title>
   </head>
   <body>
     <header>
@@ -100,7 +100,44 @@
         </nav>
         <main class="col-md-auto ms-sm-auto col-lg-10 px-md-4">
           <div class="row main-wrapper">
-            Hello
+            <div class="text-center" style="margin-top: 122px">
+                <h3 class="select-txt">Select your institution</h3>
+                <div class="dropdown">
+                  <button
+                    class="btn btn-secondary dropdown-toggle"
+                    type="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Search
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a class="dropdown-item" href="#">Institution name </a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Institution name </a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Institution name </a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Institution name </a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Institution name </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            <div class="text-center transfer-txt">
+              <p style="visibility: hidden;">
+                <!-- This paragraph is placeholder, it keeps the tablet view in place -->
+                You are now being taken to the UK Credit website in order to
+                complete your credit check. Keep this browser open to return
+                later.
+              </p>
+            </div>
           </div>
         </main>
       </div>
@@ -117,10 +154,10 @@
             Registration No. 274837662.
           </span>
           <br />
-          <span class="mt-4">
+          <p class="mt-4">
             Need help? Call us on 0345 544 1563 (all calls are recorded for
             training and monitoring purposes)
-          </span>
+          </p>
         </div>
       </div>
     </div>
