Minimize footer on the rest of the pages

--- a/credit-report/index.html
+++ b/credit-report/index.html
@@ -116,7 +116,6 @@
         </main>
       </div>
     </div>
-
     <div class="bottom-tray bottom-tray-show">
       <div class="row">
         <div class="text-center footer-txt">
@@ -128,10 +127,10 @@
             Registration No. 274837662.
           </span>
           <br />
-          <p class="mt-4">
+          <span class="mt-4">
             Need help? Call us on 0345 544 1563 (all calls are recorded for
             training and monitoring purposes)
-          </p>
+          </span>
         </div>
       </div>
     </div>
