--- a/institution/index.html
+++ b/institution/index.html
@@ -101,37 +101,37 @@
         <main class="col-md-auto ms-sm-auto col-lg-10 px-md-4">
           <div class="row main-wrapper">
             <div class="text-center" style="margin-top: 122px">
-                <h3 class="select-txt">Select your institution</h3>
-                <div class="dropdown">
-                  <button
-                    class="btn btn-secondary dropdown-toggle"
-                    type="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    Search
-                  </button>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="#">Institution name </a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Institution name </a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Institution name </a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Institution name </a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Institution name </a>
-                    </li>
-                  </ul>
-                </div>
+              <h3 class="select-txt">Select your institution</h3>
+              <div class="dropdown">
+                <button
+                  class="btn btn-secondary dropdown-toggle"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Search
+                </button>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="#">Institution name </a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Institution name </a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Institution name </a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Institution name </a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Institution name </a>
+                  </li>
+                </ul>
               </div>
+            </div>
             <div class="text-center transfer-txt">
-              <p style="visibility: hidden;">
+              <p style="visibility: hidden">
                 <!-- This paragraph is placeholder, it keeps the tablet view in place -->
                 You are now being taken to the UK Credit website in order to
                 complete your credit check. Keep this browser open to return
@@ -154,10 +154,10 @@
             Registration No. 274837662.
           </span>
           <br />
-          <p class="mt-4">
+          <span class="mt-4">
             Need help? Call us on 0345 544 1563 (all calls are recorded for
             training and monitoring purposes)
-          </p>
+          </span>
         </div>
       </div>
     </div>
