--- a/authenticate/index.html
+++ b/authenticate/index.html
@@ -157,10 +157,10 @@
             Registration No. 274837662.
           </span>
           <br />
-          <p class="mt-4">
+          <span class="mt-4">
             Need help? Call us on 0345 544 1563 (all calls are recorded for
             training and monitoring purposes)
-          </p>
+          </span>
         </div>
       </div>
     </div>
