--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -71,17 +71,27 @@
               <span class="navbar-toggler-icon"></span>
             </button>
           </div>
-
-          <div
-            style="flex: 0.02"
-            class="collapse navbar-collapse"
-            id="navbarCollapse"
-          ></div>
         </div>
       </nav>
     </header>
     <div class="container-fluid">
       <div class="row">
+        <div
+          style="flex: 1"
+          class="collapse navbar-collapse"
+          id="navbarCollapse"
+        >
+          <div class="d-flex flex-column">
+            <span class="mobile-top-menu">
+              <img src="../assets/my-details.png" />
+              My Details
+            </span>
+            <span class="mobile-top-menu">
+              <img src="../assets/dashboard-icon.png" />
+              Dashboard
+            </span>
+          </div>
+        </div>
         <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
           <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item">
@@ -98,8 +108,6 @@
             </li>
           </ul>
         </nav>
-        <main class="col-md-auto ms-sm-auto col-lg-10 px-md-4">
-          <div class="row main-wrapper">
             <div class="col-lg-6 col-md-6 col-sm-12 card-wrapper">
               <div class="card">
                 <div class="card-body">
