--- a/my-details/index.html
+++ b/my-details/index.html
@@ -98,6 +98,38 @@
             </li>
           </ul>
         </nav>
+       <div
+          style="flex: 1"
+          class="collapse navbar-collapse"
+          id="navbarCollapse"
+        >
+          <div class="d-flex flex-column">
+            <span class="mobile-top-menu">
+              <img src="../assets/my-details.png" />
+              My Details
+            </span>
+            <span class="mobile-top-menu">
+              <img src="../assets/dashboard-icon.png" />
+              Dashboard
+            </span>
+          </div>
+        </div>
+        <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+          <ul class="nav nav-pills flex-column mb-auto">
+            <li class="nav-item">
+              <a href="#" class="nav-link active" aria-current="page">
+                <img src="../assets/dashboard-icon.png" />
+                Dashboard
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link link-light">
+                <img src="../assets/my-details.png" />
+                My Details
+              </a>
+            </li>
+          </ul>
+        </nav>
         <main class="col-md-auto ms-sm-auto col-lg-10 px-md-4">
           <div class="row main-wrapper">
             <div
