Fix padding issues on the gradient side

--- a/dashboard-3/index.html
+++ b/dashboard-3/index.html
@@ -219,13 +219,13 @@
                   Your browser does not support the video tag.
                 </video>
               </div>
-              <div class="mt-5 main-txt text-center">
+              <div class="main-txt text-center">
                 <p>
                   This is some reinforcing information about the product and why
                   the user should continue. Aenean euismod bibendum laoreet.
                 </p>
               </div>
-              <div class="row mt-4 bullets">
+              <div class="row bullets">
                 <span class="question-wrapper">
                   <img
                     width="28px"
